<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".main.AllowanceActivity"
    android:background="@drawable/background_gradient">

    <TextView
        android:id="@+id/allowance_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allowance_title"
        android:textColor="@color/text"
        android:theme="@style/h1"
        app:layout_constraintBottom_toTopOf="@+id/allowance_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.459"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.252" />


    <com.santalu.maskara.widget.MaskEditText
        android:id="@+id/allowance_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="88dp"
        android:hint="Ex. $5.00"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/allowance_frequency_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:mask="$##.##"
        app:maskCharacter="#"
        app:maskStyle="completable" />

    <Button
        android:id="@+id/allowance_button_continue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="88dp"
        android:text="@string/button_continue"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/allowance_frequency_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="172dp"
        android:hint="Ex. Once a week"
        app:layout_constraintBottom_toTopOf="@+id/allowance_button_continue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/allowance_amount_label"
        android:labelFor="@id/allowance_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="15dp"
        android:text="@string/allowance_amount"
        android:theme="@style/text"
        app:layout_constraintBottom_toTopOf="@+id/allowance_amount"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/allowance_amount_frequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/allowance_frequency"
        android:theme="@style/text"
        app:layout_constraintBottom_toTopOf="@+id/allowance_frequency_spinner"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>




